{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 46,
  "lineage": "62aa8a2d-9f2e-6979-8b84-276298120567",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_app_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183906787:loadbalancer/app/alb-app-eks/bcdbb118dc64ca56",
            "arn_suffix": "app/alb-app-eks/bcdbb118dc64ca56",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-app-eks-1387587696.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183906787:loadbalancer/app/alb-app-eks/bcdbb118dc64ca56",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-app-eks",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb3963e466fecb84"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0697fb1bcde721865"
              },
              {
                "subnet_id": "subnet-0e20412df96232c80"
              }
            ],
            "subnets": [
              "subnet-0697fb1bcde721865",
              "subnet-0e20412df96232c80"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.sg_alb_tls",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183906787:listener/app/alb-app-eks/bcdbb118dc64ca56/b5b5ee94538809f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590183906787:targetgroup/alb-tg-app-eks/9e7cbc67ab7abfd9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183906787:listener/app/alb-app-eks/bcdbb118dc64ca56/b5b5ee94538809f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590183906787:loadbalancer/app/alb-app-eks/bcdbb118dc64ca56",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_app_eks",
            "module.alb.aws_lb_target_group.alb_tg_app_eks",
            "module.security_groups.aws_security_group.sg_alb_tls",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_app_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183906787:targetgroup/alb-tg-app-eks/9e7cbc67ab7abfd9",
            "arn_suffix": "targetgroup/alb-tg-app-eks/9e7cbc67ab7abfd9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183906787:targetgroup/alb-tg-app-eks/9e7cbc67ab7abfd9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-app-eks",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_app_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183906787:targetgroup/alb-tg-app-eks/9e7cbc67ab7abfd9-20240528193120314100000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590183906787:targetgroup/alb-tg-app-eks/9e7cbc67ab7abfd9",
            "target_id": "i-0b5907f062b9fb9a8"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.alb_tg_app_eks",
            "module.eks.aws_eks_cluster.eks_adn",
            "module.eks.aws_eks_node_group.nodo-adn",
            "module.eks.aws_iam_role.eks_adn",
            "module.eks.aws_iam_role.role_node_eks_adn",
            "module.eks.aws_iam_role_policy_attachment.adn-AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.adn-AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.adn-AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_adn_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks_adn_AmazonEKSVPCResourceController",
            "module.eks.data.aws_iam_policy_document.assume_role",
            "module.eks.data.aws_instance.eks_node",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_instance",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0e87fae068ae8d4e0",
            "arn": "arn:aws:ec2:us-east-1:590183906787:instance/i-0b5907f062b9fb9a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:eks:cluster-name",
                "values": [
                  "eks-adn"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-48c7e056-e921-0fe0-65f8-ca36ddbbff05",
            "id": "i-0b5907f062b9fb9a8",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-033592f120d2c90f6",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-44-204-147-47.compute-1.amazonaws.com",
            "public_ip": "44.204.147.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6ebc0c8c43af3e0",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "10.0.1.168",
              "10.0.1.169",
              "10.0.1.39",
              "10.0.1.7",
              "10.0.1.89"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e20412df96232c80",
            "tags": {
              "eks:cluster-name": "eks-adn",
              "eks:nodegroup-name": "nodo-eks-adn",
              "k8s.io/cluster-autoscaler/eks-adn": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/eks-adn": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0609cecb23a9d12b9"
            ]
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:security-group/sg-0fb3963e466fecb84",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0fb3963e466fecb84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_alb_allow_tls",
            "name_prefix": "",
            "owner_id": "590183906787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_alb_allow_tls"
            },
            "tags_all": {
              "Name": "sg_alb_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:internet-gateway/igw-0acb18ced56708afd",
            "id": "igw-0acb18ced56708afd",
            "owner_id": "590183906787",
            "tags": {
              "Name": "adn-igw"
            },
            "tags_all": {
              "Name": "adn-igw"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:route-table/rtb-04a8324937133dbeb",
            "id": "rtb-04a8324937133dbeb",
            "owner_id": "590183906787",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acb18ced56708afd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "tags_all": {
              "Name": "Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03abc810f1a3f31fb",
            "route_table_id": "rtb-04a8324937133dbeb",
            "subnet_id": "subnet-0697fb1bcde721865"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077609bcdf0f9499c",
            "route_table_id": "rtb-04a8324937133dbeb",
            "subnet_id": "subnet-0e20412df96232c80"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:subnet/subnet-0300ee8a5c6d39d2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300ee8a5c6d39d2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183906787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private app subnet az1"
            },
            "tags_all": {
              "Name": "Private app subnet az1"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:subnet/subnet-02c8e76e30a29e46a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c8e76e30a29e46a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183906787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private app subnet az2"
            },
            "tags_all": {
              "Name": "Private app subnet az2"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:subnet/subnet-09c4f2e12437fd261",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4f2e12437fd261",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183906787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private data subnet az1"
            },
            "tags_all": {
              "Name": "Private data subnet az1"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:subnet/subnet-0a2a75e72185ae19e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2a75e72185ae19e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183906787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private data subnet az2"
            },
            "tags_all": {
              "Name": "Private data subnet az2"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:subnet/subnet-0697fb1bcde721865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0697fb1bcde721865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183906787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet az1"
            },
            "tags_all": {
              "Name": "Public subnet az1"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:subnet/subnet-0e20412df96232c80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e20412df96232c80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183906787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet az2"
            },
            "tags_all": {
              "Name": "Public subnet az2"
            },
            "vpc_id": "vpc-0cd06e0f4f40a0814"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183906787:vpc/vpc-0cd06e0f4f40a0814",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-095583825be922432",
            "default_route_table_id": "rtb-066e2c97569cb083d",
            "default_security_group_id": "sg-07075d1af1eccd75c",
            "dhcp_options_id": "dopt-0d552d81c0d558af3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd06e0f4f40a0814",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066e2c97569cb083d",
            "owner_id": "590183906787",
            "tags": {
              "Name": "adn-vpc"
            },
            "tags_all": {
              "Name": "adn-vpc"
            }
          }
        }
      ]
    }
  ]
}